--- a/calculadora_normal/style/style.css
+++ b/calculadora_normal/style/style.css
@@ -152,6 +152,37 @@ nav a{
     font-size: 20px;
 }
 /* -------------------------------triangulos------------------------ */
+/* *********************** cuadrados *************************** */
+.squares-view{
+    background-color: burlywood;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.squares-container{
+    background-color: darkgray;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+    width: 22.5rem;
+}
+.square-operations{
+    border: 1px solid black;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    /* gap: 5px; */
+    align-items: center;
+
+    padding: 20px;
+    text-align: center;
+    width: 21.5rem;
+}
+.square-operations h3{
+    grid-column: 1/3;
+    grid-row: 1/2;
+}
+/* *********************** cuadrados *************************** */
 /* solo mobile  */
 .mobile-menu{
     border: 1px solid green;
