--- a/calculadora_normal/style/style.css
+++ b/calculadora_normal/style/style.css
@@ -170,17 +170,46 @@ nav a{
 .square-operations{
     border: 1px solid black;
     display: grid;
-    grid-template-columns: 50% 50%;
-    /* gap: 5px; */
-    align-items: center;
-
+    grid-template-columns: 1fr 1fr;
+    place-items: center;
+    gap: 1rem;
     padding: 20px;
     text-align: center;
     width: 21.5rem;
 }
+.square-operations div{
+    border: 1px solid black;
+    width: 100%;
+    border-radius: 10px;
+    cursor: pointer;
+    box-shadow: 2px 2px 2px 2px rgb(43, 78, 255);
+    background-color: antiquewhite;
+}
 .square-operations h3{
     grid-column: 1/3;
     grid-row: 1/2;
+    border: 1px solid black;
+    width: 100%;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.view-area-rectangulo-operation{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    border: 2px dotted blue;
+    gap: 1rem;
+    padding: 2rem;
+    place-items: center;
+}
+#btn-result-area-operation{
+    border: 3px solid rgb(64, 64, 251, 0.5);
+    border-radius: 5px;
+    background-color: rgb(192, 251, 251);
+    width: 100%;
+    text-align: center;
+    margin: 0;
+    padding: 5px;
+    cursor: pointer;
 }
 /* *********************** cuadrados *************************** */
 /* solo mobile  */
