--- a/calculadora_normal/style/style.css
+++ b/calculadora_normal/style/style.css
@@ -212,14 +212,14 @@ nav a{
     padding: 5px;
     cursor: pointer;
 }
-.view-perimetro-rectangulo-operation{
+/* .view-perimetro-rectangulo-operation{
     display: grid;
     grid-template-columns: 1fr 1fr;
     border: 2px dotted blue;
     gap: 1rem;
     padding: 2rem;
     place-items: center;
-}
+} */
 #btn-result-perimetro-operation{
     border: 3px solid rgb(64, 64, 251, 0.5);
     border-radius: 5px;
