--- a/calculadora_normal/style/style.css
+++ b/calculadora_normal/style/style.css
@@ -230,6 +230,26 @@ nav a{
     padding: 5px;
     cursor: pointer;
 }
+#btn-result-diagonal-operation{
+    border: 3px solid rgb(64, 64, 251, 0.5);
+    border-radius: 5px;
+    background-color: rgb(192, 251, 251);
+    width: 100%;
+    text-align: center;
+    margin: 0;
+    padding: 5px;
+    cursor: pointer;
+}
+#btn-result-angulo-Alfa-operation{
+    border: 3px solid rgb(64, 64, 251, 0.5);
+    border-radius: 5px;
+    background-color: rgb(192, 251, 251);
+    width: 100%;
+    text-align: center;
+    margin: 0;
+    padding: 5px;
+    cursor: pointer;
+}
 /* *********************** cuadrados *************************** */
 /* solo mobile  */
 .mobile-menu{
