--- a/calculadora_normal/style/style.css
+++ b/calculadora_normal/style/style.css
@@ -251,6 +251,19 @@ nav a{
     cursor: pointer;
 }
 /* *********************** cuadrados *************************** */
+/* ######################## circulos #########################*/
+.circles-view{
+    background-color: darkcyan;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.menu-opciones-circulo{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 20px;
+}
+/* ########################################################## */
 /* solo mobile  */
 .mobile-menu{
     border: 1px solid green;
